Fixed navbar header. using div instead of p.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="header">
-        <p class="navbar_right"><b>Header Logo</b></p>
-        <p class="navbar_left">
+        <div class="navbar_left"><b>Header Logo</b></div>
+        <div class="navbar_right">
             <ul>
                 <li><a href="">header link 1</a></li>
                 <li><a href="">header link 2</a></li>
                 <li><a href="">header link 3</a></li>
             </ul>
-        </p>
+        </div>
     </div>
 
     <section class="content">
