Added image bit to landing page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
+
 <body>
     <div class="header">
         <div class="navbar_left"><b>Header Logo</b></div>
@@ -20,8 +22,19 @@
     </div>
 
     <section class="content">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quos cumque ut sed deserunt veritatis, quis velit totam cupiditate voluptatum modi fuga maxime necessitatibus dolores tenetur laborum possimus est earum.
+        <div class="Hero">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes
+                under the main title. It's a smaller font
+                and the color is lower contrast.
+            </p>
+
+            <button>Sign up</button>
+        </div>
+        <img src="/images/Lightning.jpeg" alt="Lightning">
     </section>
+
+    
 
 
 
@@ -32,6 +45,7 @@
     <div class="footer">
         <p>My right to copy!</p>
     </div>
-    
+
 </body>
+
 </html>
