--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <button>Sign up</button>
         </div>
-        <img src="/images/Lightning.jpeg" alt="Lightning">
+        <img src="./images/Lightning.jpeg" alt="Lightning">
     </section>
 
     
