Added random information section to landing page

--- a/index.html
+++ b/index.html
@@ -31,11 +31,37 @@
 
             <button>Sign up</button>
         </div>
-        <img src="Landing-Page/images/Lightning.jpeg" alt="Lightning">
+        <img src="/images/Lightning.jpeg" alt="Lightning">
     </section>
 
     
+    <section class="random">
+        <h2>Some random information.</h1>
 
+        <div class="container">
+            <div class="article">
+                <img src="/images/Strike1.jpeg" alt="lightning">
+                <caption>This is a cool lightning strike image</caption>
+            </div>
+
+            <div class="article">
+                <img src="/images/Strike2.jpg" alt="lightning">
+                <caption>This is a cool lightning strike image</caption>
+            </div>
+
+            <div class="article">
+                <img src="/images/Strike3.jpeg" alt="lightning">
+                <caption>This is a cool lightning strike image</caption>
+            </div>
+            
+            <div class="article">
+                <img src="/images/Strike4.jpeg" alt="lightning">
+                <caption>This is a cool lightning strike image</caption>
+            </div>
+        </div>
+
+
+    </section>
 
 
 
