Did an attempt at this, may come back sometime to pilish it

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="action_container">
             <h4>Time to take action!</h4>
             <p>Sign up to this random thing and you get nothing, deal?</p>
-
+            <button class="actionsign">Sign up</button>
         </div>
 
 
